# HairSim

./: CMakeLists.txt  README.md  TODO.txt
HairSimXcode/HairSimXcode.xcodeproj/: project.pbxproj
HairSimXcode/HairSimXcode.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
HairSimXcode/HairSimXcode.xcodeproj/project.xcworkspace/xcuserdata/henrique.xcuserdatad/: UserInterfaceState.xcuserstate
HairSimXcode/HairSimXcode.xcodeproj/xcuserdata/henrique.xcuserdatad/xcschemes/: HairSimXcode.xcscheme
bogus/: CMakeLists.txt  CMakeSources.txt
bogus/Core/: ExternalForce.hh
bogus/Core/BlockSolvers/: ConstrainedSolverBase.impl.hpp  GaussSeidel.impl.hpp  GaussSeidelBase.hpp  GaussSeidelBase.impl.hpp
bogus/Core/Eigen/: EigenLinearSolvers.hpp
bogus/Core/Utils/: NonSmoothNewton.impl.hpp
bogus/Extra/SOC/: FischerBurmeister.impl.hpp  LocalSOCSolver.impl.hpp  SOCLaw.hpp
bogus/Interfaces/: FrictionProblem.cpp  FrictionProblem.hpp  MecheEigenInterface.cpp  MecheEigenInterface.hpp
hairSim/: CMakeLists.txt  CMakeSourceFiles.txt  Config.h  hairSimApp.cpp
hairSim/Collision/: Collision.cpp  Collision.h  CollisionDetector.cpp  CollisionDetector.h  CollisionParameters.h  EdgeEdgeCollision.cc  EdgeEdgeCollision.cpp  EdgeEdgeCollision.h  EdgeEdgeCollision.hh  EdgeFaceCollision.cc  EdgeFaceCollision.cpp  EdgeFaceCollision.h  EdgeFaceCollision.hh  ElementProxy.cc  ElementProxy.cpp  ElementProxy.h  ElementProxy.hh  TwistEdgeCollision.cc  TwistEdgeCollision.hh  TwistEdgeHandler.cc  TwistEdgeHandler.cpp  TwistEdgeHandler.h  TwistEdgeHandler.hh  VertexFaceCollision.cc  VertexFaceCollision.cpp  VertexFaceCollision.h  VertexFaceCollision.hh
hairSim/Collision/CollisionUtils/: BVH.cc  BVH.hh  BVHNode.hh  BoundingBox.hh  CTCD.cpp  CollisionUtils.cc  CollisionUtils.cpp  CollisionUtils.h  CollisionUtils.hh  SpatialHashMap.hh  SpatialHashMapFwd.hh
hairSim/Core/: ImplicitStepper.cc  ImplicitStepper.hh  SimBogusUtils.cpp  SimTwistEdgeUtils.cpp  SimUtils.cpp  Simulation.cpp  Simulation.h  SimulationParameters.h  SimulationUtils.cpp  SimulationUtils.h
hairSim/Forces/: AirDragForce.cc  AirDragForce.hh  BendingForce.cc  BendingForce.hh  ForceAccumulator.hh  ForceBase.hh  GravitationForce.cc  GravitationForce.hh  InertialForce.cc  InertialForce.hh  NonlinearForce.h  PenaltyForce.cc  PenaltyForce.hh  StrandStrandForce.cc  StrandStrandForce.hh  StretchingForce.cc  StretchingForce.hh  TwistingForce.cc  TwistingForce.hh  ViscousOrNotViscous.hh
hairSim/Math/: BandMatrix.h  BandMatrixFwd.h  Distances.cc  Distances.hh  LinearSolver.cc  LinearSolver.hh  SymmetricBandMatrixSolver.h
hairSim/Mesh/: ObjParser.cpp  ObjParser.h  TriMesh.cpp  TriMesh.h  TriMeshController.cpp  TriMeshController.h  TriangularMesh.cpp  TriangularMesh.h
hairSim/Render/: Color.h  Image.cpp  Image.h  OpenGLDecl.h  RenderUtils.cpp  RenderUtils.h  StrandRenderer.cpp  StrandRenderer.h  TriMeshRenderer.cpp  TriMeshRenderer.h
hairSim/Render/Camera/: Camera.cpp  Camera.h  TrackBall.cpp  TrackBall.h  Translator.cpp  Translator.h  ViewController.cpp  ViewController.h  Zoomer.cpp  Zoomer.h
hairSim/Scenes/: Aleka.cpp  Aleka.h  Braid.cpp  Braid.h  CousinIt.cpp  CousinIt.h  Knot.cpp  Knot.h  Locks.cpp  Locks.h  MultipleContact.cpp  MultipleContact.h  PlayBack.cpp  PlayBack.h  Scene.cpp  Scene.h  SceneUtils.cpp  SceneUtils.h  SingleContact.cpp  SingleContact.h
hairSim/Simulation/: ImplicitStepper.cpp  ImplicitStepper.h  SimBogusUtils.cpp  SimTwistEdgeUtils.cpp  SimUtils.cpp  Simulation.cpp  Simulation.h  SimulationParameters.h
hairSim/Strand/: DOFScriptingController.cpp  DOFScriptingController.h  ElasticStrand.cpp  ElasticStrand.h  ElasticStrandParameters.cpp  ElasticStrandParameters.h  ElasticStrandUtils.cpp  ElasticStrandUtils.h  StrandDynamics.cpp  StrandDynamics.h  StrandState.cpp  StrandState.h
hairSim/Strand/Dependencies/: BendingProducts.cc  BendingProducts.hh  DegreesOfFreedom.cc  DegreesOfFreedom.hh  DependencyNode.hh  ElasticityParameters.hh  Kappas.cc  Kappas.hh  MaterialFrames.cc  MaterialFrames.hh  ReferenceFrames.cc  ReferenceFrames.hh  Twists.cc  Twists.hh
hairSim/Utils/: Definitions.h  EigenSerialization.h  Option.h  StringUtils.h  ThreadUtils.h
